fixed spacing issue with images

--- a/styles/sass/partials/_fonts.scss
+++ b/styles/sass/partials/_fonts.scss
@@ -42,7 +42,7 @@ p {
 }
 
 .lordTitles p{
-    font-size:1.8rem;
-    font-weight: 800;
-    line-height:25px;
+    // font-size:1.8rem;
+    // font-weight: 800;
+    // line-height:25px;
 }
