--- a/styles/styles.css
+++ b/styles/styles.css
@@ -215,7 +215,9 @@ h3 {
           justify-content: space-between;
 }
 
-.firstColumn, .secondColumn, .thirdColumn {
+.firstColumn,
+.secondColumn,
+.thirdColumn {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -225,9 +227,6 @@ h3 {
           flex-direction: column;
   width: calc(100% / 3);
   margin-right: 20px;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
 }
 
 .houseName {
@@ -248,6 +247,12 @@ h3 {
 .secondColumn .emblem {
   width: 100%;
   margin: 0 auto;
+  padding: 20px 0;
+}
+
+.secondColumn .emblem img {
+  margin: 0 auto;
+  max-width: 300px;
 }
 
 .thirdColumn {
@@ -257,6 +262,12 @@ h3 {
 .thirdColumn .currentLordImage {
   width: 100%;
   margin: 0 auto;
+  padding: 20px 0;
+}
+
+.thirdColumn .currentLordImage img {
+  margin: 0 auto;
+  max-width: 300px;
 }
 
 .arrowButton {
@@ -273,12 +284,6 @@ h3 {
 }
 
 .lordImage {
-  margin: 0 auto;
-  max-width: 300px;
-  margin-top: 10px;
-}
-
-.emblem img {
   margin: 0 auto;
   max-width: 300px;
   margin-top: 10px;
@@ -325,12 +330,6 @@ p {
   font-size: 2.2rem;
   margin: 0;
   text-align: center;
-}
-
-.lordTitles p {
-  font-size: 1.8rem;
-  font-weight: 800;
-  line-height: 25px;
 }
 
 .wrapper {
